# conan_example

./: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  gtest_example.cc  interface.h  interfaceA.cc  interfaceB.cc  interface_b.h  main.cc
test_package/: CMakeLists.txt  conanfile.py  example.cpp
